# embisi-cdl

./: .gitignore  Makefile  Makefile.in  Makefile_build_config.in  README.md  config.h.in  configure.ac  grip.toml
backend/: Makefile  be_model_includes.h  c_md_target.cpp  c_md_target.h  c_model_descriptor.cpp  c_model_descriptor.h  cdl_version.h  md_target_c.cpp  md_target_c.h  md_target_cdl_header.cpp  md_target_cdl_header.h  md_target_verilog.cpp  md_target_verilog.h  md_target_xml.cpp  md_target_xml.h
cdl_frontend/: Makefile  c_co_chain.cpp  c_co_constructors.cpp  c_cyclicity.cpp  c_cyclicity.h  c_lexical_analyzer.cpp  c_lexical_analyzer.h  c_library.cpp  c_library.h  cyclicity.cpp
doc/: MigrationToV2.md  Readme.md
execution_harnesses/: Makefile  eh_batch_mode.cpp  eh_c_py_engine.cpp  eh_py_engine.c  eh_py_engine.cpp  eh_py_engine.h  eh_scripting_python.cpp
pycdl/: Makefile  c_python_telnetd.py  c_telnetd.py
python/: Makefile
python/cdl/sim/: __init__.py  base.py  bit_vector.py  connectivity.py  engine.py  exceptions.py  exec_file.py  extensions.py  hardware.py  hierarchy.py  instantiable.py  mif.py  modules.py  th_exec_file.py  types.py  unittest.py  waves.py  wires.py
python/cdl/tools/: cdl_mem_convert.py  cdl_regress.py  parametrize_verilog.py
python/cdl/utils/: __init__.py  csr.py  memory.py  verilog.py  xilinx.py
regression/: Makefile  library_desc.py  regress  regress.py  test.py
regression/tests/: library_description  model_list
regression/tests/clock_gate/: gc_simple.cdl  test.py
regression/tests/csrc/: exec_me.cpp
regression/tests/event/: __init__.py  test.py
regression/tests/instantiation/: __init__.py  hierarchy.cdl  hierarchy.hwex  hierarchy.vcd  hierarchy_comb_and_clocked2.cdl  hierarchy_complex.cdl  hierarchy_reg2.cdl  hierarchy_reg2.h  hierarchy_struct.cdl  hierarchy_struct.vcd  test.batch  vector_test_harness.th
regression/tests/log/: c_log_toggle.cpp  csrc_test.cpp  csrc_test.h  lfsr_log_tracker.cdl  test.py
regression/tests/memory/: __init__.py  test.py
regression/tests/pycdl/: test.py
regression/tests/simple/: __init__.py  all.hwex  test.py  test_harness.th
regression/tests/struct/: __init__.py  color.h  generic_fifo.cdl  nested_structures_3.cdl  point.h  test.py
regression/tests/vector/: test.py  vector.hwex  vector_test_harness.sv  vector_test_harness.th  vector_toggle_complex.cdl  verilator_top.cpp
regression/tests/verilog/: ram.mif  ram_burst.cdl  ram_burst_v.v  rams.cpp  srw_rams.v  test.py
scripts/: Makefile  Makefile_cdl_template_config.in  cdl_create_make  cdl_desc.py  cdl_simulation.mk  cdl_templates.mk  cdl_templates_old.mk  makefile_hdr  simulation_build_make
simulation_engine/: Makefile  ToDo.md  c_se_engine.cpp  c_se_engine.h  c_se_engine__checkpoint_restore.cpp  c_se_engine__coverage.cpp  c_se_engine__instantiation.cpp  c_se_engine__internal_types.h  c_se_engine__interrogation.cpp  c_se_engine__log.cpp  c_se_engine__registration.cpp  c_se_engine__simulation.cpp  c_se_engine__submodule.cpp  c_se_engine__waveform.cpp  se_cmodel_assist.cpp  se_cmodel_assist.h  se_engine_callbacks.cpp  se_engine_callbacks.h  se_engine_function.cpp  se_engine_function.h  se_errors.h  se_external_module.cpp  se_external_module.h  se_internal_module.cpp  se_internal_module__ddr.cpp  se_internal_module__logger.cpp  se_internal_module__sram.cpp  se_internal_module__test_harness.cpp  se_wrapped_verilator.cpp  se_wrapped_verilator.h
support_libraries/: Makefile  c_sl_error.cpp  c_sl_error.h  sl_ef_lib_event.cpp  sl_ef_lib_fifo.cpp  sl_ef_lib_memory.cpp  sl_ef_lib_random.cpp  sl_exec_file.cpp  sl_exec_file.h  sl_mif.cpp  sl_option.cpp  sl_option.h  sl_timer.h  sl_work_list.cpp  sl_work_list.h
verilog/: Makefile
verilog/verilator/: clock_gate_module.v  srams.v
verilog/xilinx/: srams.v
